--- a/public/news.html
+++ b/public/news.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <div id="wrapper">
-      <h1>The Targum Stew</h1>
-      <h2>Where you can see the newest news at Rutgers, provided by the Daily Targum</h2>
+      <h1>Scholarships</h1>
+      <h2>The freshest batch of Scholarships you should apply to.</h2>
       <div id="articles"></div>
       <div class="container card-group"></div>
       <div id="notes"></div>
